another correction for comments

--- a/Server/MindHorizon/Views/Home/PostDetails.cshtml
+++ b/Server/MindHorizon/Views/Home/PostDetails.cshtml
@@ -177,7 +177,7 @@
 
                         <!-- Comment Area Start -->
                         <!-- Comment Area Start -->
-                        <div class="comment_area clearfix mb-50 bg-parentComment">
+                        <div class="comment_area clearfix mb-50 bg-parentComment p-2">
 
                             <!-- Section Title -->
                             <div class="section-heading style-2">
@@ -189,9 +189,9 @@
                                 <ul>
                                     @foreach (var item in Model.Comments)
                                     {
-                                        <li class="single_comment_area">
+                                        <li class="single_comment_area bg-Comment m-4 p-2" >
                                             <!-- Comment Content -->
-                                            <div id="@("comment-"+item.CommentId)" class="comment-content d-flex m-3">
+                                            <div id="@("comment-"+item.CommentId)" class="comment-content d-flex m-1">
                                                 <!-- Comment Author -->
                                                 <div class="comment-author">
                                                     <img src="~/assets/img/UserPic.png" alt="author">
@@ -212,8 +212,8 @@
                                                 <ol class="children">
                                                     @foreach (var sub in item.comments)
                                                     {
-                                                        <li class="single_comment_area m-3">
-                                                            <div id="@("comment-"+sub.CommentId)" class="comment-content d-flex bg-subComment m-3">
+                                                        <li class="single_comment_area m-1 bg-Comment m-1 p-1">
+                                                            <div id="@("comment-"+sub.CommentId)" class="comment-content d-flex bg-subComment">
                                                                 <div class="comment-author m-2">
                                                                     <img src="~/assets/img/UserPic.png" alt="author">
                                                                 </div>
