--- a/Server/MindHorizon/Views/Shared/_Layout.cshtml
+++ b/Server/MindHorizon/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <div id="modal-placeholder"></div>
     <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
