--- a/Server/MindHorizon/Areas/Admin/Views/Post/CreateOrUpdate.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Post/CreateOrUpdate.cshtml
@@ -264,7 +264,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">بستن</button>
-                <button type="button" id="cropImageBtn" class="btn btn-sm btn-primary mr-2">برش</button>
+                <button type="button" id="cropImageBtn" class="btn btn-sm btn-primary mr-2">برش و انتخاب</button>
             </div>
         </div>
     </div>
