--- a/Server/MindHorizon/wwwroot/assets/css/argon.css
+++ b/Server/MindHorizon/wwwroot/assets/css/argon.css
@@ -21,6 +21,10 @@
     font-family: Vazir_Medium !important;
 }
 
+.font_Vazir_FD {
+    font-family: Vazir_FD !important;
+}
+
 :root {
     --blue: #5e72e4;
     --indigo: #5603ad;
@@ -2641,7 +2645,7 @@ fieldset:disabled a.btn {
         }
 
 .btn-success {
-    color: #fff;
+    color: #fff !important;
     border-color: #2dce89;
     background-color: #2dce89;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
@@ -2758,7 +2762,7 @@ fieldset:disabled a.btn {
         }
 
 .btn-danger {
-    color: #fff;
+    color: #fff !important;
     border-color: #f5365c;
     background-color: #f5365c;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
@@ -14985,10 +14989,7 @@ a.text-lighter:focus {
         box-shadow: 0 7px 14px rgba(50, 50, 93, .1), 0 3px 6px rgba(0, 0, 0, .08);
     }
 
-    .btn:not(:last-child) {
-        margin-right: .5rem;
-    }
-
+   
     .btn i:not(:first-child),
     .btn svg:not(:first-child) {
         margin-left: .5rem;
@@ -15543,10 +15544,6 @@ a.btn-icon-only {
     .card-lift--hover:hover {
         transition: none;
     }
-}
-
-.card-stats .card-body {
-    padding: 1rem 1.5rem;
 }
 
 .card-stats .card-status-bullet {
