--- a/Server/MindHorizon/Areas/Admin/Views/Comments/_CommentsTable.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Comments/_CommentsTable.cshtml
@@ -1,9 +1,10 @@
-﻿
-    <div id="toolbar">
-        <button type="button" class="btn btn-danger" data-toggle="ajax-modal" data-url="@Url.Action("DeleteGroup","Tag")">
-            <i class="fa fa-trash"></i> | حذف گروهی
-        </button>
-    </div>
+﻿@model MindHorizon.ViewModels.Comments.CommentViewModel
+
+<div id="toolbar">
+    <button type="button" class="btn btn-danger" data-toggle="ajax-modal" data-url="@Url.Action("DeleteGroup","Tag")">
+        <i class="fa fa-trash"></i> | حذف گروهی
+    </button>
+</div>
 <table id="table"
        data-toolbar="#toolbar"
        data-search="true"
@@ -22,7 +23,7 @@
        data-page-list="[10, 25, 50, 100, all]"
        data-show-footer="true"
        data-side-pagination="server"
-       data-url="/Admin/Comments/GetComments"
+       data-url="/Admin/Comments/GetComments?postId=@Model.PostId&&isConfirmed=@Model.IsConfirm"
        data-response-handler="responseHandler"></table>
 
 
