--- a/Server/MindHorizon/Views/Home/PostDetails.cshtml
+++ b/Server/MindHorizon/Views/Home/PostDetails.cshtml
@@ -98,9 +98,11 @@
                                 <div class="post-meta d-flex">
                                     <a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> @Model.Post.NumberOfComments</a>
                                     <a href="#"><i class="fa fa-eye" aria-hidden="true"></i> @Model.Post.NumberOfVisit</a>
-                                    <a href="#"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> @Model.Post.NumberOfLike</a>
-                                    <a href="#"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> @Model.Post.NumberOfDisLike</a>
-                                    <a href="#"><i class="fa fa-bookmark-o" aria-hidden="true"></i></a>
+                                    <a onclick="LikeOrDisLike('@Model.Post.PostId', true)"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i><span id="like">@Model.Post.NumberOfLike</span></a>
+                                    <a onclick="LikeOrDisLike('@Model.Post.PostId', false)"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i><span id="dislike">@Model.Post.NumberOfDisLike</span></a>
+                                    <a onclick="Bookmark('@Model.Post.PostId')" id="bookmark">
+                                        <i class="fa @(Model.Post.IsBookmarked?"fa-bookmark":"fa-bookmark-o")" aria-hidden='true'></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -183,10 +185,10 @@
                             </div>
                             @if (Model.Comments.Count() != 0)
                             {
-                                <ul>
+                                <ul >
                                     @foreach (var item in Model.Comments)
                                     {
-                                        <li class="single_comment_area">
+                                        <li class="single_comment_area bg-parentComment">
                                             <!-- Comment Content -->
                                             <div id="@("comment-"+item.CommentId)" class="comment-content d-flex">
                                                 <!-- Comment Author -->
