--- a/Server/MindHorizon/Areas/Admin/Views/DynamicAccess/Index.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/DynamicAccess/Index.cshtml
@@ -42,7 +42,7 @@
         <div class="row mt-5">
             <div class="card shadow w-100">
                 <div class="card-header font_Vazir_Medium">
-                    <h4 class="mb-1"> تنظیم سطوح دسترسی پویای کاربر «@Model.UserIncludeUserClaims.FirstName @Model.UserIncludeUserClaims.LastName»</h4>
+                    <h4 class="mb-1"> تنظیم سطوح دسترسی کاربر «@Model.UserIncludeUserClaims.FirstName @Model.UserIncludeUserClaims.LastName»</h4>
                 </div>
                 <form method="post"
                       asp-controller="DynamicAccess"
