--- a/Server/MindHorizon/Views/Shared/_Layout.cshtml
+++ b/Server/MindHorizon/Views/Shared/_Layout.cshtml
@@ -1,17 +1,21 @@
-﻿<!DOCTYPE html>
+﻿@using MindHorizon.Services.Contracts
+@using MindHorizon.ViewModels.Settings
+@inject IWritableOptions<SiteSettings> writableLocations
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
+    <meta name="description" content="@writableLocations.Value.SiteInfo.MetaDescriptionTag">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>وب سایت افق فکر</title>
+    <title>@writableLocations.Value.SiteInfo.Title</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="/assets/img/core-img/favicon.ico">
+    <link rel="icon" href="/assets/img/@writableLocations.Value.SiteInfo.Favicon">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="~/css/style.css">
@@ -42,7 +46,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6">
                         <!-- Breaking News Widget -->
-                        @await  Component.InvokeAsync("LatestPostsTitleList")
+                        @await Component.InvokeAsync("LatestPostsTitleList")
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="top-meta-data d-flex align-items-center justify-content-end">
@@ -56,8 +60,8 @@
                             </div>
                             <!-- Top Search Area -->
                             <div class="top-search-area">
-                                <form action="index.html" method="post">
-                                    <input type="search" name="top-search" id="topSearch" placeholder="جستجو ...">
+                                <form asp-action="Search" method="post">
+                                    <input type="search" name="searchText" id="topSearch" placeholder="جستجو ...">
                                     <button type="submit" class="btn"><i class="fa fa-search" aria-hidden="true"></i></button>
                                 </form>
                             </div>
@@ -78,7 +82,7 @@
                     <nav class="classy-navbar justify-content-between" id="vizewNav">
 
                         <!-- Nav brand -->
-                        <a href="index.html" class="nav-brand"><img src="/assets/img/core-img/logo.png" alt="" height="90"> وب سایت افق فکر </a>
+                        <a href="/Home/Index" class="nav-brand"><img src="/assets/img/@writableLocations.Value.SiteInfo.Logo" alt="" height="90">@writableLocations.Value.SiteInfo.Title</a>
 
 
                         <!-- Navbar Toggler -->
@@ -94,7 +98,7 @@
                             </div>
 
                             <!-- Nav Start -->
-                            @await  Component.InvokeAsync("CategoryList")
+                            @await Component.InvokeAsync("CategoryList")
                             <!-- Nav End -->
                         </div>
                     </nav>
@@ -112,7 +116,7 @@
                 <div class="col-12 col-sm-6 col-xl-3">
                     <div class="footer-widget mb-70">
                         <!-- Logo -->
-                        <a href="index.html" class="foo-logo d-block mb-4"><img src="/assets/img/core-img/logo.png" alt="" height="80"></a>
+                        <a href="/Home/Index" class="foo-logo d-block mb-4"><img src="/assets/img/@writableLocations.Value.SiteInfo.Logo" alt="" height="80"></a>
                         <p>بنویسیم تا سر حد پرواز فکر </p>
 
                     </div>
@@ -166,7 +170,7 @@
     <!-- ##### Footer Area End ##### -->
     <!-- ##### All Javascript Script ##### -->
     <!-- jQuery-2.2.4 js -->
- 
+
     <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/active.js"></script>
