--- a/Server/MindHorizon/wwwroot/css/style.css
+++ b/Server/MindHorizon/wwwroot/css/style.css
@@ -3111,3 +3111,22 @@ a:not([href]):not([tabindex]) {
     -moz-box-shadow: 2px 2px 4px 5px #ccc; /* Firefox 3.5 - 3.6 */
     box-shadow: 2px 2px 4px 5px #ccc; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
+
+.loadingCricle {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: 4px solid #ccc;
+    border-top: 4px solid #e30d0d;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+}
