one step behind

--- a/Server/MindHorizon/Views/Home/PostsInCategoryAndTag.cshtml
+++ b/Server/MindHorizon/Views/Home/PostsInCategoryAndTag.cshtml
@@ -63,3 +63,41 @@
     </div>
 </div>
 <!-- ##### Archive List Posts Area End ##### -->
+
+<script>
+    var pageSize = 5;
+    var pageIndex = 0;
+    GetData();
+    $(window).scroll(function () {
+        if (Math.ceil($(window).scrollTop()) == $(document).height() - $(window).height()) {
+            GetData();
+        }
+    });
+
+    function GetData() {
+        $.ajax({
+            type: 'GET',
+            url: '/Home/GetPostsInCategoryAndTag',
+            data:{"pageindex":pageIndex,"pagesize":pageSize,"categoryId":'@Model.Id'},
+            dataType: 'json',
+            success: function (data) {
+                if (data != null) {
+                   $.each(data, function (i) {
+                       $("#container").append("<div class='single-post-area style-2'><div class='row align-items-center'><div class='col-12 col-md-6'> <div class='post-thumbnail'><img src='/postImage/" + data[i].imageName + "' alt='" + data[i].imageName + "' /><span class='video-duration'>" + data[i].persianPublishTime + "</span></div></div><div class='col-12 col-md-6'><div class='post-content mt-0'><a href='#' class='post-cata cata-sm cata-success'>" + data[i].nameOfCategories + "</a> <a href='/Posts/" + data[i].postId + "/" + data[i].url + "' class='post-title mb-2'>" + data[i].title + "</a><div class='post-meta d-flex align-items-center mb-2'><a href='#' class='post-author'>" + data[i].authorName + "</a><i class='fa fa-circle' aria-hidden='true'></i><a href='#' class='post-date'>" + data[i].persianPublishDate + "</a></div><p class='mb-2'>"
+                          +data[i].abstract+"</p><div class='post-meta d-flex'><a href='#'><i class='fa fa-comments-o' aria-hidden='true'></i> "+ data[i].numberOfComments+"</a><a href='#'><i class='fa fa-eye' aria-hidden='true'></i> "+ data[i].numberOfVisit+"</a><a href='#'><i class='fa fa-thumbs-o-up' aria-hidden='true'></i> "+ data[i].numberOfLike+"</a><a href='#'><i class='fa fa-thumbs-o-down' aria-hidden='true'></i> "+ data[i].numberOfDisLike+"</a></div></div></div></div></div> ");
+                   });
+                   pageIndex++;
+                }
+            },
+            beforeSend : function () {
+                $("#progress").show();
+            },
+            complete : function () {
+                $("#progress").hide();
+            },
+            error: function () {
+                 ShowSweetErrorAlert();
+            }
+        });
+    }
+</script>
