Migrate to 3.1 Completed

--- a/Server/MindHorizon/Areas/Admin/Views/UserManager/Details.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/UserManager/Details.cshtml
@@ -291,7 +291,7 @@
                                                     @if (Model.LockoutEnd.HasValue)
                                                     {
                                                         var lockoutEnd = Model.LockoutEnd.Value.DateTime.ToLocalTime();
-                                                        @ConvertDateTime.ConvertMiladiToShamsi(lockoutEnd,"dd MMMM yyyy ساعت HH:mm:ss")              
+                                                        @DateTimeExtensions.ConvertMiladiToShamsi(lockoutEnd,"dd MMMM yyyy ساعت HH:mm:ss")              
                                                     }
 
                                                 </td>
