--- a/Server/MindHorizon/Views/Home/PostDetails.cshtml
+++ b/Server/MindHorizon/Views/Home/PostDetails.cshtml
@@ -118,7 +118,7 @@
                                     <ul>
                                         @for (var i = 0; i < Model.Post.TagNamesList.Count; i++)
                                         {
-                                            <li><a href="/Tag/@Model.Post.TagIdsList[i]">@Model.Post.TagNamesList[i]</a></li>
+                                            <li><a href="/Tag/@Model.Post.TagIdsList[i +1]">@Model.Post.TagNamesList[i]</a></li>
                                         }
 
                                     </ul>
